Started refactoring of the FlightReader class